# cbor_cpp

./: .clang-format  .clangd  .dir-locals.el  .gitignore  Makefile.am  README.md  conanfile.py  configure.ac
.github/workflows/: cpp.yaml
m4/: glvi_cbor_array_count_max.m4  glvi_cbor_bstr_count_max.m4  glvi_cbor_map_count_max.m4  glvi_cbor_tstr_count_max.m4  glvi_cxx_lib_expected.m4  glvi_cxx_lib_ranges.m4
src/: .clangd  Makefile.am  glvi_cbor.cpp  glvi_cbor.h  glvi_cbor.hh  glvi_cbor_array.cpp  glvi_cbor_array.h  glvi_cbor_array.hh  glvi_cbor_bstr.cpp  glvi_cbor_bstr.h  glvi_cbor_bstr.hh  glvi_cbor_bstr_tests.cpp  glvi_cbor_float.cpp  glvi_cbor_float.h  glvi_cbor_int.h  glvi_cbor_int.hh  glvi_cbor_map.cpp  glvi_cbor_map.h  glvi_cbor_map.hh  glvi_cbor_nint.cpp  glvi_cbor_nint.h  glvi_cbor_nint.hh  glvi_cbor_parser.cpp  glvi_cbor_parser.h  glvi_cbor_parser_tests.cpp  glvi_cbor_scanner.cpp  glvi_cbor_scanner.h  glvi_cbor_scanner_helper.h  glvi_cbor_scanner_tests.cpp  glvi_cbor_simple.cpp  glvi_cbor_simple.h  glvi_cbor_tag.cpp  glvi_cbor_tag.h  glvi_cbor_tag.hh  glvi_cbor_tstr.cpp  glvi_cbor_tstr.h  glvi_cbor_tstr.hh  glvi_cbor_tstr_tests.cpp  glvi_cbor_u64.cpp  glvi_cbor_u64.h  (+9 more)
test_package/: conanfile.py  main.cpp
